--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -102,33 +102,38 @@ copyright_notice:
 comments:
   core:
     enable_at:
-    # - index
+      - index
       - post
       - page
     template:
       _shared: ""
       index: ""
-      post: ""
-      page: ""
+      post: <div id="w-comments" class="kr-comments" data-path="$PATH"></div>
+      page: <div id="w-comments" class="kr-comments" data-path="$PATH"></div>
   count:
-    enable_at: []
-    # - index
-    # - post
+    enable_at:
+      - index
+      - post
     template:
-      _shared: ""
+      _shared: <span data-path="$PATH" class="waline-comment-count"> </span>
       index: ""
       post: ""
 
-# 访问数量统计
 visit_count:
-  enable_at: []
+  enable_at:
+    - index
+    - post
   template:
-    _shared: ""
+    _shared: <span data-path="$PATH" class="waline-pageview-count"> </span>
     index: ""
     post: ""
 
+
 ################## 额外的注入代码 ##################
 additional_injections:
-  head: "" # 搜索引擎验证，或是追加的样式表
-  footer: ""
-  after_footer: "" # 站点分析，或是追加的脚本
+  head: |
+    <link rel="stylesheet" href="https://unpkg.com/@waline/client@v3/dist/waline.css" />
+    <link rel="stylesheet" href="/comments/waline.css" />
+  after_footer: |
+    <script defer type="module" src="/comments/waline.js"></script>
+
